# meridian

./: .cursorrules  .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.analyst  Dockerfile.communicator  Dockerfile.optimizer  Dockerfile.orchestrator  Dockerfile.sentinel  README.md  deploy.sh  docker-compose.yml  firebase.json  launch_all.py  pyproject.toml  setup-secrets.sh  setup.sh  setup_without_git.sh
.claude/: settings.json
.claude/commands/: agent.md  demo.md  deploy.md  frontend.md  pitch.md  test.md
.github/workflows/: deploy.yml
agents/analyst/: agent.py  server.py  tools.py
agents/communicator/: agent.py  server.py  tools.py
agents/optimizer/: agent.py  server.py  tools.py
agents/orchestrator/: agent.py  server.py
agents/sentinel/: agent.py  server.py  tools.py
config/: firebase.json  firestore.rules
data/: corridors.json  demo_scenario.json  ports.json  vessel_names.json
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: api-health.spec.ts  demo-flow.spec.ts  full-audit.spec.ts  live-site.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentStatus.tsx  AlertBanner.tsx  ChatPanel.tsx  ExportMenu.tsx  FloatingChat.tsx  HowItWorksModal.tsx  HumanitarianOverlay.tsx  KeyboardShortcutsModal.tsx  MapView.tsx  MobileNotification.tsx  ReasoningPanel.tsx  (+4 more)
shared/: config.py  knowledge_graph.py  logger.py  models.py  reasoning_log.py
tools/: ais_stream.py  maps_routes.py  news_feed.py  port_congestion.py  weather.py
(+3 files in other folders)
